# Jarvis

./: .env.example  .gitignore  EXAMPLE_OUTPUT.md  README.md  RUNNING.md  SKILLS_USAGE.md  download_skill_creator.sh  llm_test_log.json  main.py  pyproject.toml  test_llm_with_logging.py
.cursor/rules/: 01-philosophy-simplicity.mdc  02-process.mdc  (+4 more)
apps/cli/: __init__.py  (+1 more)
config/: .env.example  .env.local  .env.local.example  README.md  env.sample
core/: __init__.py  controller.py  errors.py  formatter.py  intent.py  schemas.py
docs/: 2025-11-09-init.md  EXTENSION_POINTS.md  INTEGRATION_OPENCODE_CLI.md  Jarvis_2025-11-09_Worklog.md  Jarvis_OpenMemory_Integration.md  OFFICIAL_DESIGN_COMPLIANCE_PLAN.md  PLANNER_FILE_ACCESS_EXAMPLE.md  PLANNER_FILE_ACCESS_EXPLANATION.md  PROGRESSIVE_DISCLOSURE_IMPLEMENTATION.md  README_FOR_CONTRIBUTORS.md  SKILL_CREATOR_CHINESE_TEST.md  SKILL_CREATOR_FLOW_ANALYSIS.md  SKILL_CREATOR_TEST_REPORT.md  SKILL_IMPROVEMENTS.md  architecture.md
identity_pack/: constitution.yaml  memory_policy.yaml  preferences.yaml  skills_profile.yaml  version.json  voice_style.yaml
interfaces/: __init__.py
memory/: __init__.py  client_openmemory.py  local_tasks.json  openmemory_client.py  repo.py  schemas.py
sandbox/: test_file.txt
scripts/: chat.py  check_health.sh  dev_bootstrap.sh  memory_search.py  run_cli.sh  self_check.py  static_check.py  static_check.sh
skills/: registry.py
tests/: test_prompts.py
tools/: python_run.py  registry.py  runner.py
utils/: __init__.py  config.py  http.py  ids.py  io.py  logger.py  security.py  time_utils.py
(+148 files in other folders)
